[metadata]
name = scioer-builder
version = attr: builder.__version__
author = Marshall Asch
author_email = masch@uoguelph.ca
description = A cli application to help build custom versions of the sci-oer course container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sci-oer/automated-builder
project_urls =
    Bug Tracker = https://github.com/sci-oer/automated-builder/issues
    Documentation = https://github.com/sci-oer/automated-builder/blob/main/README.md
    Funding = https://github.com/sci-oer/automated-builder/blob/main/.github/FUNDING.md
    Source = https://github.com/sci-oer/automated-builder
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
  colorlog
  docopt
  GitPython
  docker

include_package_data = True

[options.packages.find]

[options.entry_points]
console_scripts =
  scioer-builder = builder.cli:main
